...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="road.png" translatesAutoresizingMaskIntoConstraints="NO" id="6Xt-JG-cdq">
                                <rect key="frame" x="-194" y="0.0" width="802" height="695"/>
                                <constraints>
...
                                    <constraint firstAttribute="height" constant="25" id="SMP-14-ZZR"/>
                                </constraints>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NZ3-hM-aXC">
                                <rect key="frame" x="92" y="112" width="190" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="EmailBox" label="Email"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="9qZ-gj-0tP"/>
...
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="done"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cAc-gW-hx6">
                                <rect key="frame" x="92" y="150" width="190" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordBox" label="Password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="vHB-Fo-dTE"/>
...
                                    <constraint firstAttribute="width" constant="90" id="foB-BW-8Hx"/>
                                </constraints>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AiW-9S-gh0">
                                <rect key="frame" x="144" y="425" width="86" height="33"/>
                                <accessibility key="accessibilityConfiguration" label="nextButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="86" id="fYg-Zq-aAe"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Year" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2rd-qa-j3S">
                                <rect key="frame" x="16" y="94" width="70" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="MakeTextField"/>
...
                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Make" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3YG-o1-JbU">
                                <rect key="frame" x="94" y="94" width="136" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="MakeTextField"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Model" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vWX-K7-eBS">
                                <rect key="frame" x="238" y="94" width="121" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="ModelTextField"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oe3-cA-jQT">
                                <rect key="frame" x="16" y="132" width="343" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="loadTrimsButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="FrA-qQ-fGs"/>
...
